--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "19.1.0",
     "next": "15.5.4",
     "@prisma/client": "^5.20.0",
-    "prisma": "^5.20.0"
+    "prisma": "^5.20.0",
+    "openai": "^4"
   },
   "devDependencies": {
     "typescript": "^5",
